# clipboard_word_count

./: LICENSE  README.md  app.py  main.py  pyproject.toml  tkinter_test.py  word_count.py
templates/: index.html
